Finish separating TSE and PSE and clean a little.